--- a/assets/style.css
+++ b/assets/style.css
@@ -262,8 +262,10 @@ menu ul li img {
     color: rgb(0, 184, 184);
     transition: color 0.15s ease-in-out;
 }
-/* Language */
-#container #langu-sect {
+/* Skills */
+#container #skills-sect,
+#container #skills2-sect,
+#container #softskills-sect {
     border-top: solid 2px #00233B;
     border-bottom: solid 2px #00233B;
     display: flex;
@@ -271,44 +273,70 @@ menu ul li img {
     align-items: center;
     justify-content: center;
 }
-#container #langu-sect h1 {
+#container #skills-sect h1,
+#container #skills2-sect h1,
+#container #softskills-sect h1 {
     font-size: 250%;
 }
-#container #langu-sect p {
+#container #skills-sect p,
+#container #skills2-sect p,
+#container #softskills-sect p {
     margin-bottom: 50px;
     font-style: italic;
 }
-#container #langu-sect .contain {
+#container #skills-sect .contain,
+#container #skills2-sect .contain,
+#container #softskills-sect .contain {
     width: 100%;
+    height: 180px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
-#container #langu-sect .contain .card {
+#container #skills-sect .contain .card,
+#container #skills2-sect .contain .card,
+#container #softskills-sect .contain .card {
     border-radius: 0.3rem;
     width: 200px;
-    margin: 10px;
+    height: 100%;
+    margin: 5px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
-#container #langu-sect .contain .card img {
-    width: 180px;
+#container #skills-sect .contain .card img,
+#container #skills2-sect .contain .card img,
+#container #softskills-sect .contain .card img {
+    height: 80%;
 }
-#container #langu-sect .contain .card .yeet {
+#container #skills-sect .contain .card:has(h2) img,
+#container #skills2-sect .contain .card:has(h2) img,
+#container #softskills-sect .contain .card:has(h2) img {
+    height: 70%;
+}
+#container #skills-sect .contain .card .yeet,
+#container #skills2-sect .contain .card .yeet,
+#container #softskills-sect .contain .card .yeet {
     font-size: 100px;
 }
-#container #langu-sect .contain .card h2 {
+#container #skills-sect .contain .card h2,
+#container #skills2-sect .contain .card h2,
+#container #softskills-sect .contain .card h2 {
     margin: 5px 0;
 }
-#container #langu-sect .contain .card p {
+#container #skills-sect .contain .card p,
+#container #skills2-sect .contain .card p,
+#container #softskills-sect .contain .card p {
     cursor: pointer;
     color: aqua;
     transition: color 0.15s ease-in-out;
 }
-#container #langu-sect .contain .card p:hover {
+#container #skills-sect .contain .card p:hover,
+#container #skills2-sect .contain .card p:hover,
+#container #softskills-sect .contain .card p:hover {
     color: rgb(0, 184, 184);
     transition: color 0.15s ease-in-out;
 }
