--- a/assets/style.css
+++ b/assets/style.css
@@ -424,7 +424,7 @@ menu ul li img {
     height: 250px;
 }
 #container #school-sect .contain .card img:hover {
-    scale: 1.1;
+    scale: 1.05;
     transition: all 0.15s ease-in-out;
 }
 #container #school-sect .contain .card h2 {
@@ -449,6 +449,68 @@ menu ul li img {
 }
 #showPinsSLAM:hover ~ #pinsSLAM {
     display: block !important;
+}
+/* Cont. studies Section */
+#container #cont-studies-sect {
+    border-top: solid 2px #00233B;
+    border-bottom: solid 2px #00233B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#container #cont-studies-sect h2 {
+    margin-bottom: 50px;
+}
+#container #cont-studies-sect .contain {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow-y: auto;
+}
+#container #cont-studies-sect .contain .card {
+    padding: 5px;
+    width: 45%;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 150px;
+}
+#container #cont-studies-sect .contain .card.start {
+    width: 150px;
+}
+#container #cont-studies-sect .contain .card .item {
+    background: #00233B;
+    width: 50%;
+    padding: 20px;
+    border: solid 3px white;
+    border-radius: 0.8rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+#container #cont-studies-sect .contain .card.start .item {
+    background: #00233B;
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    border: solid 3px white;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 170%;
+    font-weight: bold;
+}
+#container #cont-studies-sect .contain .card .item u {
+    font-weight: bold;
+    font-size: 110%;
 }
 /* Exp Section */
 #container #exp-sect {
