--- a/assets/style.css
+++ b/assets/style.css
@@ -618,6 +618,38 @@ menu ul li img {
     font-weight: bold;
     align-self: flex-start;
 }
+/* Tech watch Section */
+#container #tech-watch-sect {
+    border-top: solid 2px #00233B;
+    border-bottom: solid 2px #00233B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#container #tech-watch-sect h2 {
+    margin-bottom: 40px;
+}
+#container #tech-watch-sect hr {
+    width: 80%;
+    border: solid 2px #00233B;
+    margin: 15px 0;
+}
+#container #tech-watch-sect .contain {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    overflow-y: auto;
+}
+#container #tech-watch-sect .contain .card {
+    width: 100px;
+    height: 100px;
+    font-size: 100px;
+}
 
 
 #container #contact-sect {
@@ -793,7 +825,8 @@ label {
 }
 [id^="maSauv1-slide"]:checked + .slide,
 [id^="maSauv2-slide"]:checked + .slide,
-[id^="whoAmI-slide"]:checked + .slide {
+[id^="whoAmI-slide"]:checked + .slide,
+[id^="techWatch-slide"]:checked + .slide {
     left: 0;
     z-index: 100;
     background-color: #00233B;
@@ -847,7 +880,8 @@ nav:hover label {
 .slide .prev, .slide .next { opacity: 0; }
 [id^="maSauv1-slide"]:checked + .slide .prev, [id^="maSauv1-slide"]:checked + .slide .next,
 [id^="maSauv2-slide"]:checked + .slide .prev, [id^="maSauv2-slide"]:checked + .slide .next,
-[id^="whoAmI-slide"]:checked + .slide .prev, [id^="whoAmI-slide"]:checked + .slide .next {
+[id^="whoAmI-slide"]:checked + .slide .prev, [id^="whoAmI-slide"]:checked + .slide .next,
+[id^="techWatch-slide"]:checked + .slide .prev, [id^="techWatch-slide"]:checked + .slide .next {
     opacity: 1;
     transition: all 0.15s 0.15s;
 }
@@ -864,7 +898,10 @@ nav:hover label {
 [id^="maSauv2-slide"]:checked + .slide img,
 [id^="whoAmI-slide"]:checked + .slide h1,
 [id^="whoAmI-slide"]:checked + .slide p,
-[id^="whoAmI-slide"]:checked + .slide img {
+[id^="whoAmI-slide"]:checked + .slide img,
+[id^="techWatch-slide"]:checked + .slide h1,
+[id^="techWatch-slide"]:checked + .slide p,
+[id^="techWatch-slide"]:checked + .slide img {
     opacity: 1;
     transform: translateY(0);
     transition: all 0.15s 0.15s;
