--- a/assets/style.css
+++ b/assets/style.css
@@ -650,8 +650,7 @@ menu ul li img {
     height: 100px;
     font-size: 100px;
 }
-
-
+/* Contact Section */
 #container #contact-sect {
     display: flex;
     flex-direction: column;
@@ -700,6 +699,7 @@ menu ul li img {
     font-style: italic;
     color: #f44336;
 }
+
 input,
 textarea,
 select {
@@ -965,10 +965,130 @@ nav:hover label {
         height: 350px;
     }
 }
-
 .info #info-frenchDev,
 .info #info-myAge,
 .info #info-sdmis,
 .info #info-blms {
     display: none;
+}
+
+#tech-watch-modal .container-row .row {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: nowrap;
+}
+#tech-watch-modal .slide-two .container-row .row img {
+    width: auto;
+    height: 80%;
+    border-radius: 0.3rem;
+}
+#tech-watch-modal .slide-one .container-row .row img,
+#tech-watch-modal .slide-three .container-row .row img {
+    width: auto;
+    height: 80%;
+    border-radius: 0.3rem;
+    transition: all 0.15s ease-in-out;
+}
+#tech-watch-modal .slide-one .container-row .row img:hover,
+#tech-watch-modal .slide-three .container-row .row img:hover {
+    scale: 1.01;
+    transition: all 0.15s ease-in-out;
+}
+@media screen and (max-width: 1700px) {
+    #tech-watch-modal .slide-one .container-row .row img,
+    #tech-watch-modal .slide-three .container-row .row img {
+        height: 70%;
+    }
+}
+@media screen and (max-width: 1600px) {
+    #tech-watch-modal .slide-one .container-row .row img,
+    #tech-watch-modal .slide-three .container-row .row img {
+        height: 60%;
+    }
+}
+@media screen and (max-width: 1490px) {
+    #tech-watch-modal .slide-one .container-row .row img,
+    #tech-watch-modal .slide-three .container-row .row img {
+        height: 55%;
+    }
+    #tech-watch-modal .slide-one .container-row h1,
+    #tech-watch-modal .slide-three .container-row h1 {
+        font-size: 200% !important;
+    }
+}
+@media screen and (max-width: 1350px) {
+    #tech-watch-modal .slide-one .container-row .row img,
+    #tech-watch-modal .slide-three .container-row .row img {
+        height: 45%;
+    }
+}
+@media screen and (max-width: 1260px) {
+    #tech-watch-modal .slide-one .container-row .row img,
+    #tech-watch-modal .slide-three .container-row .row img {
+        height: 40%;
+    }
+    #tech-watch-modal .slide-one .container-row h1,
+    #tech-watch-modal .slide-three .container-row h1 {
+        font-size: 160% !important;
+    }
+}
+@media screen and (max-width: 1080px) {
+    #tech-watch-modal .slide-one .container-row .row img,
+    #tech-watch-modal .slide-three .container-row .row img {
+        height: 35%;
+    }
+    #tech-watch-modal .slide-one .container-row h1,
+    #tech-watch-modal .slide-three .container-row h1 {
+        font-size: 140% !important;
+    }
+}
+#tech-watch-modal hr {
+    margin: 50px 130px;
+    border: solid 2px rgba(255, 255, 255, 0.1);
+}
+#tech-watch-modal h1 {
+    font-size: 200%;
+}
+#tech-watch-modal .slide-two .container-row {
+    margin: 0 130px;
+}
+#tech-watch-modal .slide-two .container-row .row img {
+    width: 100px;
+    transition: width 0.25s ease-in-out;
+}
+#tech-watch-modal .slide-two .container-row .row img:hover {
+    width: 500px;
+    transition: width 0.25s ease-in-out;
+}
+#tech-watch-modal .container-row .card-info p {
+    margin-top: -40px;
+    background-color: rgba(0, 0, 0, 0.70);
+    padding: 5px 0;
+    font-weight: bold;
+}
+#tech-watch-modal .container-row .card-info img:hover ~ p:not(.info) {
+    scale: 1.01;
+}
+#tech-watch-modal .slide-three .container-row .card-info {
+    width: 290px;
+    height: 400px;
+}
+#tech-watch-modal .slide-three .container-row .card-info img {
+    width: 290px;
+    height: 400px;
+}
+#tech-watch-modal .slide-three .container-row .card-info p.info {
+    display: none;
+    width: 100%;
+    height: 390px;
+    margin-top: -392px;
+    background: none;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: center;
 }
