ajout & correc global

--- a/assets/style.css
+++ b/assets/style.css
@@ -631,7 +631,7 @@ menu ul li img {
     margin-bottom: 40px;
 }
 #container #tech-watch-sect hr {
-    width: 80%;
+    width: 500px;
     border: solid 2px #00233B;
     margin: 15px 0;
 }
